@@ -25,6 +25,7 @@ import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterables;
 import org.apache.druid.common.utils.IdUtils;
 import org.apache.druid.data.input.StringTuple;
+import org.apache.druid.error.DruidException;
 import org.apache.druid.error.DruidExceptionMatcher;
 import org.apache.druid.error.ExceptionMatcher;
 import org.apache.druid.indexer.partitions.DynamicPartitionsSpec;
@@ -63,6 +64,7 @@ import org.apache.druid.server.coordinator.simulate.WrappingScheduledExecutorSer
 import org.apache.druid.server.http.DataSegmentPlus;
 import org.apache.druid.timeline.CompactionState;
 import org.apache.druid.timeline.DataSegment;
+import org.apache.druid.timeline.DatasourceInterval;
 import org.apache.druid.timeline.SegmentId;
 import org.apache.druid.timeline.SegmentTimeline;
 import org.apache.druid.timeline.partition.DimensionRangeShardSpec;
@@ -91,7 +93,6 @@ import org.junit.Rule;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
-import org.skife.jdbi.v2.exceptions.CallbackFailedException;
 
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
@@ -205,6 +206,7 @@ public class IndexerSQLMetadataStorageCoordinatorTest extends IndexerSqlMetadata
         derbyConnector,
         leaderSelector,
         segmentMetadataCache,
+        new SegmentsMetadataManagerConfig(null, cacheMode, null),
         emitter
     )
     {
@@ -598,9 +600,9 @@ public class IndexerSQLMetadataStorageCoordinatorTest extends IndexerSqlMetadata
       replacingSegments.add(segment);
     }
 
-    Assert.assertFalse(
-        coordinator.commitReplaceSegments(replacingSegments, ImmutableSet.of(replaceLock), null)
-                   .isSuccess()
+    Assert.assertThrows(
+        DruidException.class,
+        () -> coordinator.commitReplaceSegments(replacingSegments, ImmutableSet.of(replaceLock), null)
     );
   }
 
@@ -1589,7 +1591,7 @@ public class IndexerSQLMetadataStorageCoordinatorTest extends IndexerSqlMetadata
     );
 
     Assert.assertEquals(requestedLimit, actualUnusedSegments.size());
-    Assert.assertTrue(actualUnusedSegments.containsAll(segments.stream().limit(requestedLimit).collect(Collectors.toList())));
+    Assert.assertTrue(actualUnusedSegments.containsAll(segments.stream().limit(requestedLimit).toList()));
   }
 
   @Test
@@ -2252,7 +2254,7 @@ public class IndexerSQLMetadataStorageCoordinatorTest extends IndexerSqlMetadata
   }
 
   @Test
-  public void testRetrieveSomeUnusedSegmentIntervals()
+  public void testRetrieveSomeUnusedSegmentIntervalsForDatasource()
   {
     final String dataSource = defaultSegment.getDataSource();
     coordinator.commitSegments(Set.of(defaultSegment, defaultSegment3), null);
@@ -2275,6 +2277,38 @@ public class IndexerSQLMetadataStorageCoordinatorTest extends IndexerSqlMetadata
     Assert.assertEquals(
         1,
         coordinator.retrieveSomeUnusedSegmentIntervals(dataSource, 1).size()
+    );
+  }
+
+  @Test
+  public void testRetrieveSomeUnusedSegmentIntervals()
+  {
+    final String dataSource = defaultSegment.getDataSource();
+    coordinator.commitSegments(Set.of(defaultSegment, defaultSegment3), null);
+
+    final DateTime maxUpdatedTime = DateTimes.nowUtc();
+
+    Assert.assertTrue(coordinator.retrieveSomeUnusedSegmentIntervals(maxUpdatedTime, 100, 100).isEmpty());
+
+    markAllSegmentsUnused(Set.of(defaultSegment), DateTimes.nowUtc().minusHours(1));
+    Assert.assertEquals(
+        Map.of(new DatasourceInterval(dataSource, defaultSegment.getInterval()), 1),
+        coordinator.retrieveSomeUnusedSegmentIntervals(maxUpdatedTime, 100, 100)
+    );
+
+    markAllSegmentsUnused(Set.of(defaultSegment3), DateTimes.nowUtc().minusHours(1));
+    Assert.assertEquals(
+        Map.of(
+            new DatasourceInterval(dataSource, defaultSegment.getInterval()), 1,
+            new DatasourceInterval(dataSource, defaultSegment3.getInterval()), 1
+        ),
+        coordinator.retrieveSomeUnusedSegmentIntervals(maxUpdatedTime, 100, 100)
+    );
+
+    // Verify retrieve with limit 1 returns only 1 interval
+    Assert.assertEquals(
+        1,
+        coordinator.retrieveSomeUnusedSegmentIntervals(maxUpdatedTime, 1, 1).size()
     );
   }
 
@@ -3564,16 +3598,14 @@ public class IndexerSQLMetadataStorageCoordinatorTest extends IndexerSqlMetadata
     // Verify that the next attempt fails
     MatcherAssert.assertThat(
         Assert.assertThrows(
-            CallbackFailedException.class,
+            DruidException.class,
             () -> allocatePendingSegmentForAppendTask(wiki, firstOfJan23, IdUtils.getRandomId())
         ),
-        ExceptionMatcher.of(CallbackFailedException.class).expectRootCause(
-            DruidExceptionMatcher.internalServerError().expectMessageIs(
-                "Could not allocate segment"
-                + "[wiki_2023-01-01T00:00:00.000Z_2023-01-02T00:00:00.000Z_1970-01-01T00:00:00.000Z]"
-                + " as there are too many clashing unused versions(upto [1970-01-01T00:00:00.000ZSSSSSSSSSS])"
-                + " in the interval. Kill the old unused versions to proceed."
-            )
+        DruidExceptionMatcher.internalServerError().expectMessageIs(
+            "Could not allocate segment"
+            + "[wiki_2023-01-01T00:00:00.000Z_2023-01-02T00:00:00.000Z_1970-01-01T00:00:00.000Z]"
+            + " as there are too many clashing unused versions(upto [1970-01-01T00:00:00.000ZSSSSSSSSSS])"
+            + " in the interval. Kill the old unused versions to proceed."
         )
     );
   }
